arm: allwinner: a10_ehci:  Look for the phy based on the id

phy-names was never in the bindings schema even if it was present
in some DTS. Get the optional phy based on its ID.

PR:		240978


git-svn-id: svn+ssh://svn.freebsd.org/base/head@352941 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f